--- a/images.yaml
+++ b/images.yaml
@@ -1,5 +1,6 @@
 images:
   nethermind: ethpandaops/nethermind:master
+  #nethermind: nethermindeth/nethermind:gp-hacked-pectra
   geth: ethpandaops/geth:master
   reth: ethpandaops/reth:main
   erigon: erigontech/erigon:v3.3.3
